exports[`test renders if content loading 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={Array []}
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders result if campuses 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders result if q 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders result if schedules 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders result if tags 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={
        Array [
          Object {},
          Object {},
        ]
      }
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;

exports[`test renders without attributes 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.1x1_1700_1700_90_c1.jpg"
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      campusOnChange={[Function]}
      campuses={Array []}
      canSearchCampus={false}
      canSearchLocation={null}
      canSearchTags={false}
      content={
        Array [
          Object {},
          Object {},
        ]
      }
      findByQuery={[Function]}
      geolocationLoading={false}
      getLocation={[Function]}
      iconFill="#505050"
      inputOnChange={[Function]}
      searchQuery={null}
      selectedCampus=""
      selectedTags={Array []}
      submitTags={[Function]}
      tagOnClick={[Function]}
      tags={Array []}
      zip=""
      zipDisabled={null}
      zipOnChange={[Function]} />
  </Left>
</div>
`;
